<?xml version="1.0"?>
<package format="2">
  <name>003_msg_publisher_subscriber</name>
  <version>0.0.0</version>
  <description>The 003_msg_publisher_subscriber package</description>

  <maintainer email="kucukcollu@outlook.com">Ali Aydin Kucukcollu</maintainer>

  <license>MIT</license>

  <author email="kucukcollu@outlook.com">Ali Aydin Kucukcollu</author> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>